--- a/CSS/components/header.css
+++ b/CSS/components/header.css
@@ -2,7 +2,7 @@
     display: flex;
     height: 80px;
     width: 100%;
-    background-color: rgb(255, 174, 67);
+    background-color: var(--personal-main);
     padding: 20px;
     box-sizing: border-box;
     align-items: center;
@@ -38,5 +38,5 @@
     height: 35px;
     border: 5px solid white;
     border-radius: 50%;
-    background-color: rgb(255, 145, 0);
+    background-color: var(--personal-sub);
 }
