--- a/CSS/components/header.css
+++ b/CSS/components/header.css
@@ -7,6 +7,10 @@
     box-sizing: border-box;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 5;
 }
 
 .homepage-header__company,
