--- a/CSS/screens/home-status.css
+++ b/CSS/screens/home-status.css
@@ -1,8 +1,11 @@
 .main-home {
-    margin: 20px;
+    margin-left: 30px;
     display: flex;
-    padding-top: 60px;
-    width: 100%;
+    margin-top: 20px;
+    width: 95%;
+    box-sizing: border-box;
+    justify-content: center;
+    z-index: 1;
 }
 
 .home-status {
@@ -34,7 +37,7 @@
 
 .home-status__study-boxes {
     display: flex;
-    margin: 50px 0px 80px 0px;
+    margin: 50px 0px 50px 0px;
     box-sizing: border-box;
 }
 
@@ -44,8 +47,8 @@
     align-items: center;
     justify-content: center;
     margin-right: 30px;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     border: 1px solid var(--personal-sub);
     position: relative;
 }
@@ -117,7 +120,7 @@
 }
 
 .home-status__calander {
-    margin: 50px 0px 20px 0px;
+    margin: 50px 0px 30px 0px;
 }
 
 .home-status__calander-month {
