--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,8 @@
 /*screens*/
 @import "screens/index.css";
 @import "screens/home-status.css";
+@import "screens/home-adv.css";
+@import "screens/home-acts.css";
 
 
 /*components */
@@ -16,4 +18,9 @@
 body {
     background-color: white;
     width: 100vw;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
