--- a/CSS/screens/home-acts.css
+++ b/CSS/screens/home-acts.css
@@ -1,3 +1,146 @@
 .home-acts {
     width: 30%;
+    border: 3px solid var(--personal-main);
+    padding: 20px;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.home-acts h1 {
+    font-size: 30px;
+    font-weight: 600;
+    position: absolute;
+    top:-25px;
+    left: 15px;
+    background-color: white;
+}
+
+.home-acts h4 {
+    font-size: 22px;
+}
+
+.home-acts__cons,
+.home-acts__study {
+    border: 1px solid var(--personal-sub);
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.home-acts__study-contents {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.home-acts__study-homework,
+.home-acts__study-goal,
+.home-acts__study-study {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--personal-sub);
+    width: 120px;
+    height: 120px;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-acts__study-homework-subject,
+.home-acts__study-goal-subject,
+.home-acts__study-study-subject {
+    position: relative;
+}
+
+.home-acts__study-homework-subject,
+.home-acts__study-goal-subject,
+.home-acts__study-study-subject i {
+    font-size: 50px;
+    color: var(--personal-main);
+}
+
+.subject-name {
+    position: absolute;
+    top:10px;
+    left: 10px;
+    color: white;
+    font-size: 12px;
+}
+
+.acts-name {
+    position: absolute;
+    top: -10px;
+    left: 10px;
+    background-color: white;
+}
+
+.home-acts__study-goal-target,
+.home-acts__study-study-time {
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    position: absolute;
+    bottom: 2px;
+    left: 2px;
+}
+
+.homeworks-left {
+    color: white;
+    background-color: red;
+    font-size: 13px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    position: absolute;
+    top: -8px;
+    right: -8px;
+}
+
+.home-acts-title {
+    position: absolute;
+    top: -10px;
+    left: 10px;
+    background-color: white;
+    font-weight: 600;
+}
+
+.home-acts__cons {
+    display: flex;
+    margin-top: 40px;
+    flex-direction: column;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.home-acts__goal,
+.home-acts__looking,
+.home-acts__jasoseo,
+.home-acts__advance {
+    border: 1px solid var(--personal-sub);
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding: 20px;
+    height: 150px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+}
+
+.home-acts-subtitle {
+    font-size: 18px;
+    font-weight: 600;
+    position: absolute;
+    top: -10px;
+    left: 10px;
+    background-color: white;
+}
+
+.home-acts__cons span{
+    font-size: 14px;
+    margin-bottom: 5px;
 }
