--- a/CSS/components/row-adv.css
+++ b/CSS/components/row-adv.css
@@ -6,21 +6,21 @@
     box-sizing: border-box;
 }
 
-.home-advertise {
+.row-advertise {
     margin: 120px 30px 0px;
     width: 1000px;
     height: 200px;
     box-sizing: border-box;
 }
 
-.home-advertise__book {
+.row-advertise__book {
     border: 2px solid var(--personal-sub);
     padding: 50px 30px;
     position: relative;
     box-sizing: border-box;
 }
 
-.home-advertise__title {
+.row-advertise__title {
     font-size: 25px;
     font-weight: 600;
     position: absolute;
@@ -28,12 +28,12 @@
     left: 15px;
 }
 
-.home-advertise__book-picture {
+.row-advertise__book-picture {
     height: 100%;
     width: 100%;    
 }
 
-.home-advertise__book-image {
+.row-advertise__book-image {
     height: 100%;
     width: 100%;
 }
