--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,6 +6,7 @@
 @import "screens/study-others.css";
 @import "screens/calender.css";
 @import "screens/user.css";
+@import "screens/notes.css";
 
 
 /*components */
