--- a/CSS/components/row-adv.css
+++ b/CSS/components/row-adv.css
@@ -1,40 +1,11 @@
-.line {
-    display: flex;
-    border-left: 3px solid teal;
-    width: 2%;
-    margin-left: 2%;
-    box-sizing: border-box;
-}
-
 .row-advertise {
-    margin: 120px 30px 0px;
-    width: 1000px;
-    height: 200px;
+    margin-top: 50px;
+    width: 1200px;
+    height: 300px;
     box-sizing: border-box;
+    border: 1px solid rgba(0,0,0,0.1);
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-.row-advertise__book {
-    border: 2px solid var(--personal-sub);
-    padding: 50px 30px;
-    position: relative;
-    box-sizing: border-box;
-}
-
-.row-advertise__title {
-    font-size: 25px;
-    font-weight: 600;
-    position: absolute;
-    top:15px;
-    left: 15px;
-}
-
-.row-advertise__book-picture {
-    height: 100%;
-    width: 100%;    
-}
-
-.row-advertise__book-image {
-    height: 100%;
-    width: 100%;
-}
-
