--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,6 @@
 /*screens*/
 @import "screens/index.css";
-@import "screens/home-status.css";
-@import "screens/home-acts.css";
+@import "screens/home.css";
 @import "screens/study.css";
 @import "screens/study-others.css";
 @import "screens/calender.css";
@@ -23,10 +22,23 @@
 
 body {
     background-color: white;
-    width: 100vw;
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    width: 100vw;
+    box-sizing: border-box;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    width: 1200px;
+    box-sizing: border-box;
+    justify-content: center;
+    z-index: 1;
 }
