--- a/CSS/components/nav.css
+++ b/CSS/components/nav.css
@@ -1,47 +1,60 @@
 .nav__bar {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     padding: 10px 20px;
     box-sizing: border-box;
     width: 100%;
     border-top: 1px solid rgba(0,0,0,0.1);
-    height: 150px;
+    height: 300px;
     background-color: #FAFAFA;
     margin-top: 300px;
+    align-items: center;
+    flex-direction: column;
 }
 
-.nav__bar-image {
-    width: 20%;
-
+.nav__bar-contents {
+    margin-top: 50px;
+    width: 1200px;
+    display: flex;
+    justify-content: space-between;
 }
-.nav__bar-company,
-.nav__bar-contacts,
-.nav__bar-law {
+
+.nav__bar-company {
     display: flex;
     flex-direction: column;
-    width: 30%;
-    align-items: flex-end;
 }
 
-.nav__bar-company span,
-.nav__bar-contacts span {
-    font-size: 12px;
-    margin: 10px 0px 0px 0px;
-    color: rgba(0,0,0,0.7);
+.nav__bar-company h6 {
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: rgba(0,0,0,0.6);
 }
 
-.nav__bar-law a{
-    font-size: 15px;
-    margin: 10px 0px 0px 0px;
+.nav__bar-company span {
+    margin-top: 10px;
+    font-size: 14px;
+    color: rgba(0,0,0,0.6);
 }
 
 .nav__bar-sns {
     display: flex;
-    width: 30%;
-    justify-content: flex-end;
+    font-size: 30px;
+    color: rgba(0,0,0,0.3);
 }
 
 .nav__bar-sns a {
+    margin-right: 20px;
+}
+
+.nav__bar-law {
+    width: 1200px;
+    padding-top: 30px;
+    margin-top: 30px;
+    border-top: 1px solid rgba(0,0,0,0.1);
+    font-size: 12px;
+    color: rgba(0,0,0,0.8);
+}
+
+.nav__bar-law a {
     margin-right: 20px;
 }
