--- a/CSS/screens/study-others.css
+++ b/CSS/screens/study-others.css
@@ -1,64 +1,258 @@
-.study-others-main__studyroom {
-    border: 1px solid var(--personal-main);
+.study-search {
     display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(0,0,0,0.3);
+    padding-bottom: 20px;
+}
+
+.study-search__search {
+    display: flex;
+    align-items: center;
+}
+
+.study-search input {
+    width: 300px;
+    height: 32px;
+    border: none;
+    font-size: 18px;
+}
+
+.study-search input::placeholder {
+    color: rgba(0,0,0,0.3);
+}
+
+.study-search button {
+    border: none;
+    background-color: white;
+    font-size: 20px;
+    color: rgba(0,0,0,0.6);
+}
+
+.study-search__filter {
+    display: flex;
+    align-items: center;
+}
+
+.study-search__filter i {
+    font-size: 20px;
+    color: rgba(0,0,0,0.6);
+}
+
+#filter,
+#filter-detail {
+    font-size: 12px;
+    width: 100px;
+    height: auto;
+    border: none;
+    color: rgba(0,0,0,0.6);
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+
+.study-search__filter label {
+    font-size: 16px;
+    color: rgba(0,0,0,0.8);
+    margin: 0px 10px;
+}
+
+.study-search__filter select {
+    margin-right: 20px;
+}
+
+/* 검색 끝 */
+
+.study-create {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 30px;
+    color: rgba(0,0,0,0.6);
+    margin-bottom: 20px;
+}
+
+.study-create a {
+    border: 3px solid rgba(0,0,0,0.3);
+    width: auto;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+.study-create span {
+    font-size: 14px;
+    font-weight: 600;
+}
+
+/* 생성 끝*/
+
+.study-list {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+}
+
+.study-list__title {
+    margin-bottom: 30px;
+}
+
+.study-list h1 {
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.study-list h6 {
+    font-size: 18px;
+    font-weight: 600;
+    color: rgba(0,0,0,0.5);
+    margin-top: 30px;
+}
+
+.study-list-boxes {
+    margin-top: 30px;
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.study-list-boxes-box {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgba(0,0,0,0.2);
+    width: 280px;
+    height: 200px;
+    margin-right: 25px;
+    border-radius: 5px;
+    padding: 20px;
+    justify-content: space-between;
     position: relative;
 }
 
-.study-others-main__buttons {
-    position: absolute;
-    top: 5px;
-    right: 5px;
+.study-list-boxes-box:last-child {
+    margin-right: 0px;
+}
+
+.box-name {
     display: flex;
     justify-content: space-between;
-    font-size: 30px;
-    width: 80px;
+    align-items: flex-end;
 }
 
-.study-others-main__studyroom {
-    width: 180px;
-    height: 180px;
+.box-name h4{
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.box-name span{
+    font-size: 12px;
+}
+
+
+.box-icon {
     display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    margin: 20px;
-    
+    justify-content: center;
+    align-items: flex-end;
+    font-size: 20px;
+    padding: 0px 20px;
 }
 
-.study-others-main__studyroom-icon {
+.box-icon span {
+    margin-left: 10px;
+    font-size: 12px;
+    color: rgba(0,0,0,0.6);
+}
+
+.study-progress {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+    border-top: 1px solid rgba(0,0,0,0.1);
+}
+
+.study-progress a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.2);
+    width: 100px;
+    height: 30px;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 10px;
+}
+
+.study-list-boxes-box__icons {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+}
+
+.study-list-boxes-box__icons-date {
+    color: rgba(0,0,0,0.6);
+}
+
+.study-list-boxes-box__icons-homeworks,
+.study-list-boxes-box__icons-chats,
+.study-list-boxes-box__icons-teammates {
+    display: flex;
+    position: relative;
+    margin-left: 20px;
+    font-size: 16px;
+}
+
+.study-list-boxes-box__icons-homeworks span,
+.study-list-boxes-box__icons-chats span {
+    display: flex;
+    position: absolute;
+    border-radius: 50%;
+    height: 15px;
+    width: 15px;
+    align-items: center;
+    justify-content: center;
+    font-size: 10px;
+    font-weight: 600;
+    top: -8px;
+    right: -8px;
+    background-color: rgb(0, 81, 255);
+    color: white;
+}
+
+.study-list-boxes-box__icons-teammates span {
+    display: flex;
+    position: absolute;
+    border-radius: 50%;
+    height: 15px;
+    width: 20px;
+    align-items: center;
+    justify-content: center;
+    font-size: 10px;
+    font-weight: 600;
+    top: -8px;
+    right: -15px;
+    background-color: white;
+    border: 1px solid rgba(0,0,0,0.1);
+}
+
+.box-alert {
+    display: flex;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    font-size: 20px;
+    color: rgba(0,0,0,0.5);
+}
+
+.study-list-boxes-more {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 20px 0px;
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
 
-.study-others-main__studyroom-icon i {
+.study-list-boxes-more i {
     font-size: 50px;
-    color: var(--personal-main);
+    color: rgba(0,0,0,0.6);
 }
 
-.study-others-main__studyroom-icon span {
+.study-list-boxes-more span {
     font-size: 12px;
-}
-
-.study-others-main__studyroom-contents li {
-    font-size: 12px;
-    margin-bottom: 3px;
-    margin-left: 10px;
-}
-
-.study-others-main {
-    padding: 20px;
-    display: flex;
-    flex-direction: column ;
-    justify-content: center;
-    align-items: center;  
-    position: relative;
-    margin-bottom: 100px;
-    border: 3px solid var(--personal-main);
-    box-sizing: border-box;
-}
-
-.study-others-main__contents {
-    display: flex;
+    color: rgba(0,0,0,0.6);
 }
